Corrected paths in .ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Do to copyright issuses, I don’t include PDFs
-/Articles/*.pdf
-/Articles/_old/*.pdf
-/Articles/*.alias
-/Articles/_old/*.alias
+Articles/*.pdf
+Articles/_old/*.pdf
+Articles/*.alias
+Articles/_old/*.alias
 
 # Do not include administrative school documents
 _Administrative/**
